[gd_scene load_steps=13 format=3 uid="uid://1eau0lcfakeb"]

[ext_resource type="Script" path="res://Symboles/SceneSymbol/plaque_code.gd" id="1_1pt3d"]
[ext_resource type="Texture2D" uid="uid://dvqkf7udbht22" path="res://Symboles/Assets/Plaque_Code.png" id="2_2guv7"]
[ext_resource type="PackedScene" uid="uid://w2nbb5114tdv" path="res://Symboles/SceneSymbol/Symbole_1.tscn" id="2_sgpms"]
[ext_resource type="PackedScene" uid="uid://iln3xbxv3by4" path="res://Symboles/SceneSymbol/Symbole_2.tscn" id="3_vqxah"]
[ext_resource type="PackedScene" uid="uid://cq5kd2r8c7qrq" path="res://Symboles/SceneSymbol/Symbole_3.tscn" id="4_l5ofo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_evpl7"]
atlas = ExtResource("2_2guv7")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1skkj"]
atlas = ExtResource("2_2guv7")
region = Rect2(4, 36, 17, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5r56"]
size = Vector2(14, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_y42q0"]
atlas = ExtResource("2_2guv7")
region = Rect2(4, 36, 17, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8rej"]
size = Vector2(14, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnlc0"]
atlas = ExtResource("2_2guv7")
region = Rect2(4, 36, 17, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icaym"]
size = Vector2(14, 22)

[node name="PanelCode" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_1pt3d")
circle_symbol_scene = ExtResource("3_vqxah")
triangle_symbol_scene = ExtResource("2_sgpms")
square_symbol_scene = ExtResource("4_l5ofo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(1, 1.125)
texture = SubResource("AtlasTexture_evpl7")

[node name="Slot1" type="Area2D" parent="."]
position = Vector2(-19, 0)

[node name="Symbol" type="Sprite2D" parent="Slot1"]
texture = SubResource("AtlasTexture_1skkj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot1"]
visible = false
shape = SubResource("RectangleShape2D_n5r56")

[node name="Slot2" type="Area2D" parent="."]

[node name="Symbol" type="Sprite2D" parent="Slot2"]
texture = SubResource("AtlasTexture_y42q0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot2"]
visible = false
shape = SubResource("RectangleShape2D_j8rej")

[node name="Slot3" type="Area2D" parent="."]
position = Vector2(18.6667, 0)

[node name="Symbol" type="Sprite2D" parent="Slot3"]
texture = SubResource("AtlasTexture_vnlc0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot3"]
visible = false
shape = SubResource("RectangleShape2D_icaym")

[node name="SubmitButton" type="Button" parent="."]
offset_left = -4.0
offset_top = -20.0
offset_right = 4.0
offset_bottom = -12.0
